--- a/app/src/main/assets/privacy_policy.html
+++ b/app/src/main/assets/privacy_policy.html
@@ -41,6 +41,6 @@
 <p>We may update this policy. Any changes will be reflected in this document.</p>
 
 <h3>7. Contact Us</h3>
-<p>For any questions, reach out to admin@kinvo.com.</p>
+<p>For any questions, reach out to admin@easyinventory.io.</p>
 </body>
 </html>
