--- a/app/src/main/assets/terms_of_service.html
+++ b/app/src/main/assets/terms_of_service.html
@@ -30,13 +30,13 @@
 <body>
 
 <h1>Terms of Service</h1>
-<p><strong>Effective Date:</strong> [Insert Date]</p>
+<p><strong>Effective Date:</strong> 03/08/2025</p>
 
 <h2>1. Introduction</h2>
 <p>Welcome to <strong>EasyInventory</strong>. By using our app, you agree to the following Terms of Service. If you do not agree, please do not use this service.</p>
 
 <h2>2. Account Registration & Subscription</h2>
-<p>Users must register for an account at <a href="https://easyinventory.com">easyinventory.com</a> to access full features. A paid subscription is required for premium services.</p>
+<p>Users must register for an account at <a href="https://www.easyinventory.io">Memberships</a> to access full features. A paid subscription is required for premium services.</p>
 
 <h2>3. Data Collection & Privacy</h2>
 <p>We collect user data, including:</p>
@@ -66,9 +66,9 @@
 <p>We may update these Terms of Service at any time. Users will be notified of significant changes.</p>
 
 <h2>8. Contact Information</h2>
-<p>If you have any questions about these Terms, contact us at <a href="mailto:support@easyinventory.com">support@easyinventory.com</a>.</p>
+<p>If you have any questions about these Terms, contact us at <a href="mailto:admin@easyinventory.io">Customer Support</a>.</p>
 
-<p class="footer">© 2024 EasyInventory. All Rights Reserved.</p>
+<p class="footer">© 2025 Kinvo LLC. All Rights Reserved.</p>
 
 </body>
 </html>
