--- a/app/src/main/assets/user_agreement.html
+++ b/app/src/main/assets/user_agreement.html
@@ -30,6 +30,6 @@
 <p>We may update this agreement from time to time. Your continued use of the app signifies acceptance of any changes.</p>
 
 <h3>6. Contact</h3>
-<p>If you have any questions, please contact us at admin@kinvo.com.</p>
+<p>If you have any questions, please contact us at admin@easyinventory.io.</p>
 </body>
 </html>
